<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Waspmote App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LogIn">Log In</string>
    <string name="Register">Register</string>
    <string name="Exit">Exit</string>
    <string name="Cancel">Cancel</string>
    <string name="Name">Name</string>
    <string name="Surname">Surname</string>
    <string name="RetypePassword">Retype Password</string>
    <string name="Submit">Submit</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="InternalSensors">Internal Sensors</string>
    <string name="title_activity_internal_sensors">InternalSensorsActivity</string>
    <string name="Administration">Administration</string>
    <string name="LogOut">Log Out</string>
    <string name="title_activity_administration">AdministrationActivity</string>
    <string name="CreateUser">Create User</string>
    <string name="DeleteUser">Delete User</string>
    <string name="EditUser">Edit User</string>
    <string name="ExternalSensor">External Sensor</string>
    <string name="title_activity_external_sensor">ExternalSensorActivity</string>
    <string name="FindSensor">Find Sensor</string>
    <string name="usb_sensor">Usb sensors</string>
    <string name="title_activity_list_usb_sensors">Usb sensors</string>
    <string name="title_activity_view_usb_device_data">Realtime Usb Data</string>
    <string name="Administrator">Administrator</string>
    <string name="Guest">Guest</string>
    <string name="TurnOffBluetooth">Turn Off Bluetooth</string>
    <string name="CloseConnection">Close Connection</string>
    <string name="GetData">Get Data</string>
    <string name="title_activity_graph">GraphActivity</string>
    <string name="PlotSensorData">View Data</string>
    <string name="LogInAsGuest">Log In As Guest</string>
    <string name="GSN">GSN</string>
    <string name="Subscription">Subscription</string>
    <string name="title_activity_gsn">GsnActivity</string>
    <string name="NewGsn">New GSN</string>
    <string name="DeleteGsn">Delete GSN</string>
    <string name="EditGsn">Edit GSN</string>
    <string name="title_activity_subscription">SubscriptionActivity</string>
    <string name="title_activity_new_gsn">NewGsnActivity</string>
    <string name="GsnName">GSN Name</string>
    <string name="GsnIp">GSN Ip</string>
    <string name="GsnUsername">GSN Username [Optional]</string>
    <string name="GsnPassword">GSN Password [Optional]</string>
    <string name="GsnCreate">Create</string>
    <string name="GsnCancel">Cancel</string>
    <string name="CreateSubscription">Create Subscription</string>
    <string name="DeleteSubscription">Delete Subscription</string>
    <string name="EditSubscription">Edit Subscription</string>
    <string name="title_activity_new_subscription">NewSubscriptionActivity</string>
    <string name="SelectGSN">Select GSN</string>
    <string name="PeriodInMinutes">Period In Minutes</string>
    <string name="CreateSubscription2">Create</string>
    <string name="CancelSubscription">Cancel</string>
    <string name="DeleteData">Delete Data</string>
    <string name="BackupData">Bacup data to SD</string>
    <string name="title_activity_list_sensors_database_data">Sensors with measurement data</string>
    <string name="title_activity_list_sensors_data_type">Sensor measurement data types</string>

    <string-array name="baud_rate">
        <item>300</item>
        <item>600</item>
        <item>1200</item>
        <item>4800</item>
        <item>9600</item>
        <item>19200</item>
        <item>38400</item>
        <item>57600</item>
        <item>115200</item>
        <item>230400</item>
        <item>460800</item>
        <item>921600</item>
        <item>1000000</item>
        <item>2000000</item>
        <item>3000000</item>
        <item>4000000</item>
        <item>5000000</item>
        <item>6000000</item>
        <item>7000000</item>
        <item>8000000</item>
        <item>9000000</item>
        <item>10000000</item>
        <item>11000000</item>
        <item>12000000</item>
    </string-array>
    <string-array name="stop_bits">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="data_bits">
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="parity">
        <item>none</item>
        <item>odd</item>
        <item>even</item>
        <item>mark</item>
        <item>space</item>
    </string-array>
    <string-array name="flow_control">
        <item>none</item>
        <item>CTS/RTS</item>
        <item>DTR/DSR</item>
        <item>XOFF/XON</item>
    </string-array>
    <string-array name="port_list_1">
        <item>1</item>
    </string-array>
    <string-array name="port_list_2">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="port_list_4">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="buffer_size">
        <item>32768</item>
        <item>1M</item>
        <item>2M</item>
        <item>3M</item>
        <item>4M</item>
        <item>5M</item>
        <item>6M</item>
        <item>7M</item>
        <item>8M</item>
        <item>9M</item>
        <item>10M</item>
    </string-array>
    <string-array name="max_transfer_size">
        <item>32768</item>
        <item>16384</item>
        <item>8192</item>
        <item>4096</item>
        <item>2048</item>
        <item>1024</item>
        <item>512</item>
        <item>256</item>
        <item>128</item>
        <item>64</item>
    </string-array>
    <string-array name="buffer_number">
        <item>12</item>
        <item>10</item>
        <item>8</item>
        <item>6</item>
        <item>4</item>
        <item>2</item>
    </string-array>

 

</resources>
